WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132342
Fix bit rot in zombie mode heap code
https://bugs.webkit.org/show_bug.cgi?id=132342
Summary
Fix bit rot in zombie mode heap code
Mark Lam
Reported
2014-04-29 10:11:50 PDT
Basically, we need to enter a DelayedReleaseScope before doing a sweep.
Attachments
the patch.
(1.32 KB, patch)
2014-04-29 10:16 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2014-04-29 10:16:44 PDT
Created
attachment 230386
[details]
the patch.
Mark Hahnenberg
Comment 2
2014-04-29 10:29:09 PDT
Comment on
attachment 230386
[details]
the patch. r=me
WebKit Commit Bot
Comment 3
2014-04-29 10:45:56 PDT
Comment on
attachment 230386
[details]
the patch. Clearing flags on attachment: 230386 Committed
r167945
: <
http://trac.webkit.org/changeset/167945
>
WebKit Commit Bot
Comment 4
2014-04-29 10:45:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug