Fix bit rot in zombie mode heap code. <https://webkit.org/b/132342>

Reviewed by Mark Hahnenberg.

Need to enter a DelayedReleaseScope before doing a sweep.

* heap/Heap.cpp:
(JSC::Heap::zombifyDeadObjects):


Canonical link: https://commits.webkit.org/150353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167945 268f45cc-cd09-0410-ab3c-d52691b4dbfc